ubiquity (1.1.17) UNRELEASED; urgency=low

  * Merged with Ubiquity HEAD

 -- Evan Dandrea <evan@evalicious.com>  Tue, 12 Sep 2006 22:00:14 -0400

ubiquity (1.1.16) edgy; urgency=low

  [ Colin Watson ]
  * Reconfigure popularity-contest.
  * KDE frontend: Fix crash when moving off the mountpoints page (closes:
    Malone #60045).
  * Automatic update of included source packages: base-installer
    1.63ubuntu4, console-setup 1.7ubuntu8.

  [ Jonathan Riddell ]
  * KDE frontend: Put a link on the summary page to allow the user to
    install GRUB to somewhere other than the MBR of the first hard disk

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 12 Sep 2006 12:39:34 +0100

ubiquity (1.1.15) edgy; urgency=low

  * syslog.LOG_WARN -> syslog.LOG_WARNING (closes: Malone #59257).
  * Point console-setup.postinst at /var/lib/dpkg/info/console-setup.config
    directly, rather than trying to make a symlink to it and apparently
    failing (closes: Malone #59496).

 -- Colin Watson <cjwatson@ubuntu.com>  Fri,  8 Sep 2006 12:43:35 +0100

ubiquity (1.1.14) edgy; urgency=low

  * Put some of console-setup/Keyboard back, as we need KeyboardNames.pl
    from there.
  * Don't include console-setup's build-dependencies in our own.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu,  7 Sep 2006 20:10:07 +0100

ubiquity (1.1.13) edgy; urgency=low

  * Rename configure.in to configure.ac.
  * Drop backward compatibility for base-config/language-packs preseeding
    from Breezy.
  * Move from kbd-chooser to console-setup
    (https://launchpad.net/distros/ubuntu/+spec/sane-installer-keyboard). We
    still need to add a UI element for the keyboard variant, and
    translations of layout and variant names are missing, but it mostly
    seems to work.
  * Strip Fonts and Keyboard directories from our copy of console-setup;
    they're very large, and not needed since we don't actually build
    console-setup, but just copy a few scripts from it.