@@ -2,16 +2,16 @@ apt-setup 1:0.11ubuntu4
 base-installer 1.63ubuntu4
 choose-mirror 2.04ubuntu1
 clock-setup 0.10ubuntu1
-console-setup 1.7ubuntu8
+console-setup 1.7ubuntu9
 debian-installer-utils 1.35ubuntu2
 grub-installer 1.17ubuntu1
 hw-detect 1.41ubuntu2
 localechooser 1.20ubuntu6
 migration-assistant 0.2
 partconf 1.17
-partman-auto 54ubuntu2
+partman-auto 54ubuntu3
 partman-base 90ubuntu5
-partman-basicfilesystems 47ubuntu1
+partman-basicfilesystems 47ubuntu2
 partman-basicmethods 30
 partman-efi 9.1
 partman-ext3 41
