@@ -2,7 +2,7 @@ Source: ubiquity
 Section: admin
 Priority: optional
 Maintainer: Colin Watson <cjwatson@ubuntu.com>
-Build-Depends: apt, dash, debhelper (>= 5.0.37.2), dpkg-dev (>= 1.9.0), grep-dctrl, intltool-debian (>= 0.30+20040212), iso-codes (>= 0.35-1), libart-2.0-dev, libdebconfclient0-dev (>= 0.68), libdebian-installer4-dev (>= 0.41), libglib2.0-dev, libgtk2.0-dev, libparted1.7-dev (>= 1.7.1-1), libxml-parser-perl, libxml2-dev (>= 2.6.24), locales, po-debconf (>= 0.5.3), python, python-all-dev (>= 2.3.5-11), python-central (>= 0.5), python-gtk2-dev, python-kde3-dev, python-xml, wget
+Build-Depends: apt, dash, debconf (>= 0.5.0), debhelper (>= 5.0.37.2), dpkg-dev (>= 1.9.0), grep-dctrl, intltool-debian (>= 0.30+20040212), iso-codes (>= 0.35-1), libart-2.0-dev, libdebconfclient0-dev (>= 0.68), libdebian-installer4-dev (>= 0.41), libglib2.0-dev, libgtk2.0-dev, libparted1.7-dev (>= 1.7.1-1), libxml-parser-perl, libxml2-dev (>= 2.6.24), locales, po-debconf (>= 0.5.3), python, python-all-dev (>= 2.3.5-11), python-central (>= 0.5), python-gtk2-dev, python-kde3-dev, python-xml, wget
 Standards-Version: 3.6.2.1
 XS-Python-Version: current, >= 2.4
 
